--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:5000/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.15",
     "@mantine/hooks": "^6.0.15",
     "@tabler/icons-react": "^2.23.0",
@@ -13,6 +14,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
