--- a/server/package.json
+++ b/server/package.json
@@ -17,14 +17,14 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
     "gridfs-stream": "^1.1.1",
-    "method-override": "^3.0.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.3",
-    "nodemon": "^2.0.22",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
